--- a/esp32_room/platformio.ini
+++ b/esp32_room/platformio.ini
@@ -15,4 +15,5 @@ framework = arduino
 lib_deps = 
 	bblanchon/ArduinoJson @ ^6.18.3
 	knolleary/PubSubClient @ ^2.8
+	evert-arias/EasyButton @ ^2.0.1
 monitor_speed = 115200
